# neural-net-from-scratch

./: Chapter_2.py  LICENSE  README.md  pyproject.toml
