[tool.poetry]
name = "neural-net-from-scratch-main"
version = "0.1.0"
description = ""
authors = ["Michael Wilt <michaeljwilt@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
plotly = "^5.22.0"
matplotlib = "^3.9.0"
streamlit = "^1.35.0"
streamlit-extras = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
